[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["user"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
taskipy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.4"
pytest-mock = "^3.14.0"
ruff = "^0.6.5"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
