[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["user"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
taskipy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.4"
pytest-mock = "^3.14.0"
ruff = "^0.6.5"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.taskipy.tasks]
test = "pytest"
test-report = "pytest --cov-report=html"
fmt = "ruff format src tests && ruff check --fix src tests"
lint = "task lint-ruff && task lint-mypy"
lint-ruff = "ruff check src tests"
lint-mypy = "mypy src tests"

[tool.ruff]
target-version = "py39"
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
unfixable = [
  "F401",
  "F841",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s -vvv --cov=. --cov-branch"
env = [
  "TZ=Asia/Tokyo",
]
pythonpath = "src"
testpaths = ["tests",]
